[package]
name = "vda5050-types"
version = "0.3.0"
description = "Types defined by the VDA5050 standard for AGV communication."
authors = ["Elmar Schug <elmar.schug@jayware.org>"]
readme = "README.md"
repository = "https://github.com/kKdH/vda5050-types-rs"
documentation = "https://docs.rs/vda5050-types"
keywords = ["vda5050", "agv"]
categories = []
edition = "2024"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["fmt", "serde"]
v2_0 = []
fmt = []
serde = ["dep:serde", "dep:serde_json", "dep:serde_with", "chrono/serde"]

[dependencies]
chrono = { version = "0.4.*", default-features = false, features = ["alloc"] }
serde = { version = "1.0.*", optional = true, default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0.*", optional = true }
serde_with = { version = "3.0", optional = true }

[dev-dependencies]
googletest = { version = "0.14.2" }
rstest = { version = "0.26.1" }
serde_json = { version = "1.0.145" }
